--- a/index.html
+++ b/index.html
@@ -8,13 +8,44 @@
   body {
     background: #eee;
     margin: 0;
+    font-family: system-ui, 
+             -apple-system, BlinkMacSystemFont, 
+             "Segoe UI", 
+             "Roboto", 
+             "Oxygen", 
+             "Ubuntu", 
+             "Cantarell", 
+             "Fira Sans", 
+             "Droid Sans", 
+             "Helvetica Neue", 
+             Arial, sans-serif;
+  }
+  .tooltip {
+    position: absolute;
+    background-color: white;
+    border: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    padding: 5px;
+  }
+  .pod-name, .value {
+    font-family: ui-monospace, 
+             Menlo, Monaco, 
+             "Cascadia Mono", "Segoe UI Mono", 
+             "Roboto Mono", 
+             "Oxygen Mono", 
+             "Ubuntu Monospace", 
+             "Source Code Pro",
+             "Fira Mono", 
+             "Droid Sans Mono", 
+             "Courier New", monospace;
   }
 </style>
 
 <script>
 var margin = {top: 10, right: 40, bottom: 200, left: 50},
     width = 450 - margin.left - margin.right,
-    height = 400 - margin.top - margin.bottom;
+    height = 600 - margin.top - margin.bottom;
 
 var svg = d3.select("#area")
   .append("svg")
@@ -60,7 +91,7 @@ var randomColor = (function(){
   };
 })();
 
-d3.csv("nodes.csv", function(data) {
+d3.csv("http://127.0.0.1:8080/stats", function(data) {
   // X axis
   var x = d3.scaleBand()
     .range([ 0, width ])
@@ -89,6 +120,34 @@ d3.csv("nodes.csv", function(data) {
     return item;
   });
 
+  // Tooltip
+  var tooltip = d3.select("#area")
+    .append("div")
+    .attr("class", "tooltip")
+    .style("opacity", 0);
+  
+  var mousemove = function(d) {
+    tooltip
+      .html(
+        "Pod: <span class=\"pod-name\">" + d.pod + "</span><br>" + 
+        "CPU req: <span class=\"value\">" + d.cpu_req + "m</span>")
+      .style("left", (d3.mouse(this)[0]+70) + "px")
+      .style("top", (d3.mouse(this)[1]+32) + "px")
+  }
+  var mouseover = function(d) {
+    tooltip.style("opacity", 1)
+    d3.select(this)
+      .style("stroke", "black")
+      .style("z-index", 100)
+      .style("opacity", 1)
+  }
+  var mouseleave = function(d) {
+    tooltip.style("opacity", 0)
+    d3.select(this)
+      .style("stroke", "none")
+      .style("opacity", 0.8)
+  }
+
   // Bars
   svg.append("g")
     .selectAll("g")
@@ -103,5 +162,9 @@ d3.csv("nodes.csv", function(data) {
       .attr("width", x.bandwidth())
       .attr("height", function(d) { return height - y(d.cpu_req); })
       .attr("fill", randomColor)
+      .style("opacity", 0.8)
+      .on("mouseover", mouseover)
+      .on("mousemove", mousemove)
+      .on("mouseleave", mouseleave)
 })
 </script>
