--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@ d3.csv("http://127.0.0.1:8080/stats", function(data) {
     tooltip
       .html(
         "Pod: <span class=\"pod-name\">" + d.pod + "</span><br>" + 
-        "CPU req: <span class=\"value\">" + d.cpu_req + "m</span>")
+        "CPU req: <span class=\"value\">" + d.cpu_req + "m</span><br>" +
+        "CPU limit: <span class=\"value\">" + d.cpu_lim + "m</span><br>" +
+        "Memory req: <span class=\"value\">" + d.mem_req + "</span><br>" +
+        "Memory limit: <span class=\"value\">" + d.mem_lim + "</span>")
       .style("left", (d3.mouse(this)[0]+70) + "px")
       .style("top", (d3.mouse(this)[1]+32) + "px")
   }
@@ -157,6 +160,7 @@ d3.csv("http://127.0.0.1:8080/stats", function(data) {
       .attr("name", function(d) { return d.pod; })
       .attr("shift", function(d) { return d.shift; })
       .attr("cpu_req", function(d) { return d.cpu_req; })
+      .attr("cpu_lim", function(d) { return d.cpu_lim; })
       .attr("x", function(d) { return x(d.node); })
       .attr("y", function(d) { return y(d.shift); })
       .attr("width", x.bandwidth())
